--- a/src/css/index.css
+++ b/src/css/index.css
@@ -12,6 +12,9 @@ html, body, #root, #App {
     height: 100%;
     box-shadow: 0 0 0 1px #eaeaea;
 }
+.fixed {
+    position: fixed;
+}
 .absolute {
     position: absolute;
 }
@@ -162,6 +165,75 @@ html, body, #root, #App {
     font-weight: normal;
     text-align: center;
 }
+
+#view-product {
+    overflow-y: auto;
+}
+#view-product .cat-container {
+    height: min-content;
+}
+#view-product .cat-item {
+    display: flex;
+    flex-direction: column;
+    background: #fff;
+    min-width: 280px;
+    width: calc(100% / 3 - 40px);
+    min-height: 90%;
+    height: min-content;
+    margin: 10px auto !important;
+    border-radius: 20px;
+    box-shadow: 0 0 10px 0 #9b9b9b82;
+    position: relative;
+    transform: scale(1) !important;
+    cursor: pointer;
+}
+#view-product .cat-banner {
+    background-color: #202020;
+    background-size: contain !important;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    min-width: 280px;
+    min-height: 400px;
+    border-radius: 15px 15px 0 0;
+    position: relative;
+    z-index: 1;
+}
+#view-product .cat-item > .desc {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    width: 90%;
+    min-height: 80px;
+    margin: 5px auto;
+    padding: 10px;
+    border-radius: 15px;
+    box-shadow: 0 0 0 1px #eaeaea;
+    position: relative;
+    top: 0px;
+    z-index: 2;
+}
+#view-product .cat-item > .desc > h1 {
+    width: auto;
+    font-size: 1.1rem;
+    font-weight: bold;
+    margin: 5px auto;
+    text-align: center;
+}
+#view-product .cat-item > .desc > h2 {
+    width: auto;
+    font-size: 15px;
+    font-weight: normal;
+    margin: 5px auto;
+    text-align: center;
+}
+#view-product .cat-item > .desc > h3 {
+    font-size: 15px;
+    margin: 5px auto;
+    font-weight: normal;
+    text-align: center;
+}
+
 .ratings {
     margin: auto;
 }
@@ -194,6 +266,10 @@ html, body, #root, #App {
     width: 100%;
     height: calc(100% - 93px);
     overflow-y: auto;
+}
+#view-product {
+    background: #00000082;
+    z-index: 20;
 }
 #pay-now {
     background: white;
